--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Proyecto JS</title>
 </head>
 <body>
-    
+    <ul id="ListaOriginal">
+        <li class="item" id="item1">Ítem 1</li>
+        <li class="item" id="item2">Ítem 2</li>
+        <li class="item" id="item3">Ítem 3</li>
+    </ul>
 
 
     <script src="script.js"></script>
