Estudiamos Eventos en JS

--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
     <title>Proyecto JS</title>
 </head>
 <body>
-    <ul id="ListaOriginal">
-        <li class="item" id="item1">Ítem 1</li>
-        <li class="item" id="item2">Ítem 2</li>
-        <li class="item" id="item3">Ítem 3</li>
-    </ul>
-
-
+    <button>Click</button>
     <script src="script.js"></script>
 </body>
 </html>
